# data-structure

./: .gitignore  CMakeLists.txt
queue/linear/: Makefile  main.c  queue.c  queue.h  simulator.c  simulator.h
src/: main.c
src/data-structure/: linked_list.c  linked_list.h  queue.c  queue.h  stack.c  stack.h
src/simulator/: simulator.c  simulator.h
src/simulator/subsim/: llistsim.c  llistsim.h  queuesim.c  queuesim.h  stacksim.c  stacksim.h  subsim.h
src/util/: parser.c  parser.h
stack/static-size/: Makefile  main.c  simulator.c  simulator.h  stack.c  stack.h  types.h
